--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <div class="numbertext">1 / 4</div>
-            <img src="img1.jpg" style="width:100%">
+            <img src="img1.jpg" style="width:100%; height: 110%;">
             <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 4</div>
-            <img src="img2.jpg" style="width:100%">
+            <img src="img2.jpg" style="width:100%; height: 110%;">
             <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 4</div>
-            <img src="img3.jpg" style="width:100%;">
+            <img src="img3.jpg" style="width:100%; height: 110%;">
             <div class="text">Caption Three</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">4 / 4</div>
-            <img src="img4.jpg" style="width:100%;">
+            <img src="img4.jpg" style="width:100%; height: 110%;">
             <div class="text">Caption Three</div>
         </div>
 
@@ -102,3 +102,4 @@
 </body>
 
 </html>
+
